--- a/templates/cuisine/stockages_liste.html.twig
+++ b/templates/cuisine/stockages_liste.html.twig
@@ -14,6 +14,7 @@
             <th scope="col">#</th>
             <th scope="col">Nom</th>
             <th scope="col">Parent</th>
+            <th scope="col">Contenu</th>
             </tr>
         </thead>
         <tbody>
@@ -33,6 +34,9 @@
                         {% else %}
                             &nbsp;
                         {% endif %}
+                    </td>
+                    <td>
+                        {{ stockage.boites | length }}
                     </td>
                 </tr>
             {% endfor %}
