--- a/templates/cuisine/aliments_liste.html.twig
+++ b/templates/cuisine/aliments_liste.html.twig
@@ -8,6 +8,8 @@
 
     <p>Vous avez {{ aliments | length }} aliments :</p>
 
+    <p><a href="{{ path('cuisine_aliment_new') }}" class="dropdown-item"><i class="fas fa-plus"></i> Ajouter un aliment</a></p>
+ 
     <table class="table">
         <thead class="thead-light">
             <tr>
