--- a/templates/cuisine/boites_liste.html.twig
+++ b/templates/cuisine/boites_liste.html.twig
@@ -8,6 +8,8 @@
 
     <p>Vous avez {{ boites | length }} boites :</p>
 
+    <p><a href="{{ path('cuisine_boite_new') }}" class="dropdown-item"><i class="fas fa-plus"></i> Ajouter une boite</a></p>
+
     <table class="table">
         <thead class="thead-light">
             <tr>
