--- a/templates/cuisine/recettes_liste.html.twig
+++ b/templates/cuisine/recettes_liste.html.twig
@@ -8,6 +8,8 @@
 
     <p>Vous avez {{ recettes | length }} recettes :</p>
 
+    <p><a href="{{ path('cuisine_recette_new') }}" class="dropdown-item"><i class="fas fa-plus"></i> Ajouter une recette</a></p>
+
     <table class="table">
         <thead class="thead-light">
             <tr>
