--- a/templates/cuisine/stockages_liste.html.twig
+++ b/templates/cuisine/stockages_liste.html.twig
@@ -8,6 +8,8 @@
 
     <p>Vous avez {{ stockages | length }} stockages :</p>
 
+    <p><a href="{{ path('cuisine_stockage_new') }}" class="dropdown-item"><i class="fas fa-plus"></i> Ajouter un stockage</a></p>
+
     <table class="table">
         <thead class="thead-light">
             <tr>
