--- a/templates/cuisine/preparations_liste.html.twig
+++ b/templates/cuisine/preparations_liste.html.twig
@@ -8,6 +8,8 @@
 
     <p>Vous avez {{ preparations | length }} préparations :</p>
 
+    <p><a href="{{ path('cuisine_preparation_new') }}" class="dropdown-item"><i class="fas fa-plus"></i> Ajouter une préparation</a></p>
+
     <table class="table">
         <thead class="thead-light">
             <tr>
