--- a/templates/cuisine/typesaliment_liste.html.twig
+++ b/templates/cuisine/typesaliment_liste.html.twig
@@ -8,6 +8,8 @@
 
     <p>Vous avez {{ typesaliment | length }} types d'aliment :</p>
 
+    <p><a href="{{ path('cuisine_typealiment_new') }}" class="dropdown-item"><i class="fas fa-plus"></i> Ajouter un type d'aliment</a></p>
+
     <table class="table">
         <thead class="thead-light">
             <tr>
