--- a/templates/cuisine/unites_liste.html.twig
+++ b/templates/cuisine/unites_liste.html.twig
@@ -8,6 +8,8 @@
 
     <p>Vous avez {{ unites | length }} unités :</p>
 
+    <p><a href="{{ path('cuisine_unite_new') }}" class="dropdown-item"><i class="fas fa-plus"></i> Ajouter une unité</a></p>
+
     <table class="table">
         <thead class="thead-light">
             <tr>
