--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -10,10 +10,15 @@
         <div class="col-md-6">
             <div class="bg-light py-3 px-3">
                 <h1>Connectez vous !</h1>
+
+                {% if hasError %}
+                    <div class="alert alert-danger">Une erreur est survenue, le nom d'utilisateur ou le mot de passe est invalide...</div>
+                {% endif %}
+
                 <form action="{{ path('account_login') }}" method="post">
                     <div class="form-group">
                         <label for="pseudo">Pseudo</label>
-                        <input type="text" name="_username" id="pseudo" class="form-control" placeholder="Pseudo..." required>
+                        <input type="text" name="_username" id="pseudo" class="form-control" placeholder="Pseudo..." value="{{username}}" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Mot de passe</label>
