--- a/templates/cuisine/recette_new.html.twig
+++ b/templates/cuisine/recette_new.html.twig
@@ -58,11 +58,43 @@
     </div>
 {% endblock %}
 
-{# GESTION DES ETAPES RECETTE ################################################################################################################################################}
+{# GESTION DES INGREDIENTS ###################################################################################################################################################}
+{% block _recette_ingredients_widget %}
+    <p>Ici, vous pouvez ajouter un ingrédient pour la recette !</p>
+    {{ form_widget(form) }}
+
+<input type="hidden" id="widgets-ingredients-counter" value="0">
+
+    <div class="form-group">
+        <button type="button" id="add-ingredient" class="btn btn-primary">Ajouter un ingrédient</button>
+    </div>
+{% endblock %}
+
+{% block _recette_ingredients_entry_row %}
+    {{ form_widget(form) }}
+{% endblock %}
+
+{% block _recette_ingredients_entry_widget %}
+    <div class="form-group" id="block_{{id}}">
+        <div class="row">
+            <div class="col-10">
+                <div class="row">
+                    <div class="col">
+                        {{ form_widget(form) }}
+                    </div>
+                </div>
+            </div>
+            <div class="col-2">
+                <button type="button" data-action="delete" data-target="#block_{{id}}" class="btn btn-danger">X</button>
+            </div>
+        </div>
+    </div>
+{% endblock %}
 
 {# GESTION DES JAVASCRIPTS ###################################################################################################################################################}
 {% block javascripts %}
     <script>
+        {# etapes recette #}
         $('#add-etape').click(function(){
             // Je récupère le numéro des futurs champs à créer
             var index = +$('#widgets-counter').val();
@@ -79,6 +111,25 @@
             // Je gère le bouton supprimer
             handleDeleteButtons();
         });
+
+        {# ingredients #}
+        $('#add-ingredient').click(function(){
+            // Je récupère le numéro des futurs champs à créer
+            var index = +$('#widgets-ingredients-counter').val();
+            if(index==0)
+            {
+                index = $('#recette_ingredients div.form-group').length;
+                $('#widgets-ingredients-counter').val(index);
+            }       
+            // Je récupère le prototype des entrées
+            const tmpl = $('#recette_ingredients').data('prototype').replace(/__name__/g, index);
+            // J'injecte ce code au sein de la div
+            $('#recette_ingredients').append(tmpl);
+            $('#widgets-ingredients-counter').val(index + 1);
+            // Je gère le bouton supprimer
+            handleDeleteButtons();
+        });
+
 
         function handleDeleteButtons() {
             $('button[data-action="delete"]').click(function(){
