--- a/templates/home/index.json.twig
+++ b/templates/home/index.json.twig
@@ -1,5 +1,5 @@
 {% extends 'base.json.twig' %}
 
 {% block home %}
-Bonjour
+    Désolé mais je ne sais pas comment vous aidez pour l'instant...
 {% endblock %}
