--- a/templates/home/boites_liste.json.twig
+++ b/templates/home/boites_liste.json.twig
@@ -1,5 +1,5 @@
 {% extends 'base.json.twig' %}
 
 {% block home %}
-    J'ai {{ elements | length }} boites dans ma version de test...
+    J'ai {{ boites | length }} boites dans ma version de test...
 {% endblock %}
